[gd_scene load_steps=3 format=3 uid="uid://dee6k2vbd8oyk"]

[ext_resource type="Script" path="res://scripts/Celsius2Fahrenheit.gd" id="1_q623i"]
[ext_resource type="FontFile" uid="uid://cobis3ib7xbh7" path="res://fonts/JetBrainsMonoNerdFont-Bold.ttf" id="2_5jvef"]

[node name="Celsius2Fahrenheit" type="Node"]
script = ExtResource("1_q623i")

[node name="title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -86.5
offset_right = 86.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_5jvef")
theme_override_font_sizes/font_size = 30
text = "Celsius2Fahrenheit"

[node name="net" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -244.0
offset_top = 61.0
offset_right = 80.0
offset_bottom = 101.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_5jvef")
theme_override_font_sizes/font_size = 25
text = "Net"

[node name="model_container" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -244.0
offset_top = 100.0
offset_right = 242.0
offset_bottom = 214.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="model_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="epoch_container" type="HBoxContainer" parent="model_container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="epoch_label" type="Label" parent="model_container/VBoxContainer/epoch_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5jvef")
theme_override_font_sizes/font_size = 16
text = "epochs:"

[node name="n_epochs" type="TextEdit" parent="model_container/VBoxContainer/epoch_container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_5jvef")
theme_override_font_sizes/font_size = 16
text = "1000"

[node name="batch_container" type="HBoxContainer" parent="model_container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="batch_label" type="Label" parent="model_container/VBoxContainer/batch_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5jvef")
theme_override_font_sizes/font_size = 16
text = "batch :"

[node name="batch" type="TextEdit" parent="model_container/VBoxContainer/batch_container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_5jvef")
theme_override_font_sizes/font_size = 16
text = "1"

[node name="lr_container" type="HBoxContainer" parent="model_container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="lr_label" type="Label" parent="model_container/VBoxContainer/lr_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5jvef")
theme_override_font_sizes/font_size = 16
text = "lr    :"

[node name="lr" type="TextEdit" parent="model_container/VBoxContainer/lr_container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_5jvef")
theme_override_font_sizes/font_size = 16
text = "0.01"

[node name="VSplitContainer" type="VSplitContainer" parent="model_container"]
layout_mode = 2

[node name="train" type="Button" parent="model_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5jvef")
theme_override_font_sizes/font_size = 44
toggle_mode = true
text = " TRAIN! îŠŒ "

[node name="calculator" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -244.0
offset_top = 258.0
offset_right = 80.0
offset_bottom = 298.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_5jvef")
theme_override_font_sizes/font_size = 25
text = "Calculator"

[node name="calculator_container" type="HBoxContainer" parent="."]
offset_left = 56.0
offset_top = 298.0
offset_right = 466.0
offset_bottom = 373.0

[node name="celsius_container" type="VBoxContainer" parent="calculator_container"]
layout_mode = 2

[node name="celsius" type="Label" parent="calculator_container/celsius_container"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_5jvef")
theme_override_font_sizes/font_size = 16
text = "Celsius    :"

[node name="celsius_input" type="TextEdit" parent="calculator_container/celsius_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="fahrenheit_container" type="VBoxContainer" parent="calculator_container"]
layout_mode = 2

[node name="fahrenheit" type="Label" parent="calculator_container/fahrenheit_container"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_5jvef")
theme_override_font_sizes/font_size = 16
text = "Fahrenheit :"

[node name="n_fahrenheit" type="Label" parent="calculator_container/fahrenheit_container"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_5jvef")
theme_override_font_sizes/font_size = 16
text = "???"

[connection signal="pressed" from="model_container/train" to="." method="_on_train_pressed"]
[connection signal="text_changed" from="calculator_container/celsius_container/celsius_input" to="." method="_on_celsius_input_text_changed"]
